fixed spacing again to make line height higher

--- a/src/components/LandingPage/LandingPageStyles.scss
+++ b/src/components/LandingPage/LandingPageStyles.scss
@@ -194,7 +194,7 @@ a.nasa_logo {
     white-space: normal;
     margin-bottom: 20px;
     font-size: 1.6rem;
-    line-height: 2.1rem;
+    line-height: 2.4rem;
 }
 
 .faq {
