--- a/src/styles/inlineStyles.scss
+++ b/src/styles/inlineStyles.scss
@@ -58,7 +58,7 @@ h6 {
 p {
     font-weight: 400;
     color: #212121;
-    line-height: 2.1rem;
+    line-height: 2.4rem;
 }
 
 a {
